# zmirror

./: #AGENTS.md  #constraints.txt  .gitignore  .pylintrc  AGENTS.md  LICENSE  README.md  VERSION  default.nix  design.st  example-config.eva.yml  example-config.old.yml  example-config.st  example-config.yml  ki_utils.py  logs  package.nix  pyproject.toml  python.nix  shell.nix  temp.txt  zmirror.py
#design/: testing.km
cache-tests/: test_cache.py
cache-tests/res/: config.yml  test_disk_remove.json  test_dm_add.json  test_dm_remove.json  zpool-status.txt
debian/: changelog  control  copyright  rules  zmirror-maintenance.service  zmirror-maintenance.timer  zmirror.docs  zmirror.examples  zmirror.install  zmirror.postinst  zmirror.postrm  zmirror.prerm  zmirror.service
debian/udev/: 99-zmirror.rules
debian/zed/: all-zmirror.sh
design/: notes-lvm.km
doc/: tutorial-local-fs.md  tutorial.md
kpyutils/: cli.py  kiify.py  prelude.py  tree.py
maintenance/: test_maintenance.py
maintenance/res/: provisioning_mode.txt  setup_class.zmirror-bak-a.zpool-status.txt  setup_class.zmirror-bak-a_sysfs.zfs_volume_mode.txt  test_disk_bak_b_alpha_online.json  test_disk_bak_b_beta_online.json  test_disk_big_a_online.json  test_dmcrypt_bak_b_beta_offline.json  test_dmcrypt_bak_b_beta_online.json  (+19 more)
man/: zmirror.1  zmirror.1.html  zmirror.1.md
nix/: default.nix  nixos.nix  nixpkgs.nix  package.nix  python-package.nix  python.nix  shell.nix  version.nix
scripts/: all-zmirror.sh  manpage_entrypoint.py  zmirror-extract-raid-name  zmirror-extract-raid-name-with-partition  zmirror-trigger
src/: ki_utils.py  pyutils.py  zmirror.py  zmirror_actions.py  zmirror_commands.py  zmirror_daemon.py  zmirror_dataclasses.py  zmirror_globals.py  zmirror_logging.py  zmirror_socket.py  zmirror_trigger.py  zmirror_utils.py
src-bash/: extract-raid-name.sh  extract-raid-part-name.sh
test/: setup_test_environment.sh  test_README.md
tests/: setup_test_environment.sh  temp.txt  test_resilver_activation.py  test_scheduler.py  test_trim_inheritance_ssd.py  test_yaml_tags.py
tools/: 99-zmirror-with-raid.rules  get_version.py
udev/: 99-zmirror.rules
zmirror/: __main__.py  _version.py  actions.py  actions.py.bak  commands.py  config.py  daemon.py  dataclasses.py  defaults.py  entities.py  logging.py  operations.py  requests.km  requests.py  state.km  trigger.py  user_commands.py  util.py  zmirror.py
(+294 files in other folders)
