[project]
name = "zmirror"
description = ""
authors = [
  {name = "devvythelopper"}
]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
version = "4.0.2"



[tool.poetry]
packages = [
  { include = "zmirror" },
  { include = "kpyutils" }
]


[tool.poetry.dependencies]
natsort = ">=8.4.0"
pyyaml = ">=6.0.0"
dateparser = ">=1.2.0"
tabulate = ">=0.9.0"
cysystemd = { version = ">= 0.0.1", optional = true }

[tool.poetry.extras]
systemd = ["cysystemd"]


[tool.poetry.group.dev.dependencies]
# kpyutils = { path = "../kpyutils", develop = true }
debugpy = ">=1.8.14"
pytest = ">=8.3.5"
argparse-manpage = { path = "../argparse-manpage", develop = true } # "^4.7"
toml = ">=0.10.2"
dunamai = ">=1.0.0"

[tool.pytest.ini_options]
log_cli = true
log_level = "INFO"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"